fixed useEffect hook in BlogPage, created blog items component jsx file and blog items styles scss, added axios to package, added blog page to app js, made background that stays fixed while scrolling, added Link to blog in header component, changed project-card in project-card_styles_scss from width auto to width 300px changed project page in project page styles scss from display grid to display flex and added flex wrap and justify content center

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3),
     rgba(0, 0, 0, 0.3)), url('./assets/computer.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 20px 60px;
 }  
