--- a/src/components/project-card/project-card.styles.scss
+++ b/src/components/project-card/project-card.styles.scss
@@ -1,6 +1,6 @@
 .project-card {
     height: auto;
-    width: auto;
+    width: 300px;
     display: flex;
     padding: 20px;
     flex-direction: column;
