--- a/src/pages/projectpage/projectpage.styles.scss
+++ b/src/pages/projectpage/projectpage.styles.scss
@@ -1,8 +1,10 @@
 .project-page {
+    width: 100%;
+    height: 100%;
     margin-top: 10px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
     gap:12px;
 }
 
